--- a/resources/css/auth.css
+++ b/resources/css/auth.css
@@ -24,7 +24,11 @@
 
 form input[type="text"],
 form input[type="email"],
-form input[type="password"]
+form input[type="password"],
+form input[type="number"],
+form input[type="file"],
+form select,
+form textarea
 {
     width: 100%;
     padding: 10px;
